# socket-tic-tac-toe

./: .gitignore  CMakeLists.txt  Makefile  README.md
client/: Makefile  game.c  game.h  match.c  match.h  socket_cliente.cpp  socket_servidor.cpp  tictactoe_client.c  ui.h
client/ui/: test  ui.c  ui.h  ui.test.c  ui.test.c.old
helpers/: events.h  macros.h  message.h
server/: Makefile  game.c  game.h  match.c  match.h  socket_cliente.c  tictactoe_server.c  tictactoe_server.cpp
